--- a/Sixth/bin/AndroidManifest.xml
+++ b/Sixth/bin/AndroidManifest.xml
@@ -15,18 +15,29 @@
    
     <activity
             android:name=".SplashScreen"
-            android:label="@string/app_name" >
+            android:label="@string/app_name"
+            android:screenOrientation="portrait" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".MainActivity"></activity>
-          <activity android:name=".Bar"></activity>
-          <activity android:name=".Drinks"></activity>
-           <activity android:name=".NoResult"></activity>
-           <activity android:name=".Taxi"></activity>
+        <activity android:name=".MainActivity">
+            android:screenOrientation="portrait"
+        </activity>
+          <activity android:name=".Bar">
+              android:screenOrientation="portrait"
+          </activity>
+          <activity android:name=".Drinks">
+              android:screenOrientation="portrait"
+          </activity>
+           <activity android:name=".NoResult">
+               android:screenOrientation="portrait"
+           </activity>
+           <activity android:name=".Taxi">
+               android:screenOrientation="portrait"
+           </activity>
     </application>
 
 </manifest>
